# myFinance

./: .gitattributes  .gitignore  .hintrc  CLAUDE.md  CNAME  DEMO.md  LICENSE  README.md  build-android.bat  build-ios.sh  build.bat  deploy-direct.bat  deploy.bat  dev.bat  estate-readiness-features.md  estate-readiness-plan.md  fire-calculator.skill  index.html  package-lock.json  package.json  playwright.config.ts  publish-masters.bat  publisher.trust.json  release-notes.md  schema.manifest.json  sharedcorelib.security.json  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
demo/: build.ts  config.ts  make-video.ps1  record.ts  run-demo.ps1
docs/: TODO-going-live.md  migration-report.md  patron-and-partner.md  release-checklist.md
e2e/: import.spec.ts  navigation.spec.ts  settings.spec.ts
form-manifests/: _root.yaml  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_tax.sql  0003_goal_category.sql  0004_account_types.sql  0005_account_type_pms_aif.sql  0006_account_maturity_date.sql  0007_custom_options.sql  0008_account_emergency.sql  0009_people_documents.sql  0010_reminders.sql  0011_health_profile.sql  0012_insurance.sql  0013_holdings.sql  0014_will_meta.sql  0015_incapacity.sql  0016_access_audit.sql  0017_life_events.sql  0018_app_launches.sql  0019_master_options.sql  0020_partners.sql  0021_sync.sql  0022_account_type_tax_refund.sql  0023_account_sip.sql
src-tauri/src/: core_bootstrap.rs  lib.rs  main.rs  sync.rs
(+289 files in other folders)
